Adding Single Feature Bayes Classifier

--- a/Pattern Recognition/View/MainWindow.xaml
+++ b/Pattern Recognition/View/MainWindow.xaml
@@ -26,7 +26,7 @@
                             <TextBlock Margin="0,5,0,0" Padding="5" Text="Red"  />
                             <TextBlock Margin="0,5,0,0" Padding="5" Text="Green" />
                             <TextBlock Margin="0,5,0,0" Padding="5" Text="Blue" />
-                            <TextBlock Margin="0,5,0,0" Padding="10" Text="Class B" FontWeight="Bold" FontSize="13"/>
+                            <TextBlock Margin="0,5,0,0" Padding="10" Text="Class B" FontWeight="Bold" FontSize="13" Foreground="Black"/>
                             <TextBlock Margin="0,5,0,0" Padding="5" Text="Red" />
                             <TextBlock Margin="0,5,0,0" Padding="5" Text="Green" />
                             <TextBlock Margin="0,5,0,0" Padding="5" Text="Blue" />
@@ -93,6 +93,28 @@
                         </StackPanel>
                     </Grid>
                     <Button  Click="KickoffButton" FontSize="13" Margin="0,8,0,0" Width="200" Height="50" HorizontalAlignment="Center" Content="Kick off!"/>
+                    <Button Click="GrayScaleButton" FontSize="13" Margin="0,8,0,0" Width="200" Height="50" HorizontalAlignment="Center" Content="Generate GrayScale"/>
+                    <StackPanel Margin="0,5,0,0" Orientation="Horizontal">
+                        <TextBlock Padding="10" Text="Class 1" FontWeight="Bold" FontSize="13"/>
+                        <TextBox Margin="3,0,0,0" Padding="5" GotFocus="RemovenMeauNotation" Loaded="AddMeauNotation" LostFocus="AddMeauNotation"  x:Name="Class1Meau"  HorizontalAlignment="Left" Width="50" />
+                        <TextBox Margin="3,0,0,0" Padding="5" GotFocus="RemovenSigmaNotation" Loaded="AddSigmaNotation" LostFocus="AddSigmaNotation" x:Name="Class1Sigma" HorizontalAlignment="Right" Width="50" />
+                    </StackPanel>
+                    <StackPanel Margin="0,5,0,0" Orientation="Horizontal">
+                        <TextBlock Padding="10" Text="Class 2" FontWeight="Bold" FontSize="13"/>
+                        <TextBox Margin="3,0,0,0" Padding="5" GotFocus="RemovenMeauNotation" Loaded="AddMeauNotation" LostFocus="AddMeauNotation"  x:Name="Class2Meau"  HorizontalAlignment="Left" Width="50" />
+                        <TextBox Margin="3,0,0,0" Padding="5" GotFocus="RemovenSigmaNotation" Loaded="AddSigmaNotation" LostFocus="AddSigmaNotation" x:Name="Class2Sigma" HorizontalAlignment="Right" Width="50" />
+                    </StackPanel>
+                    <StackPanel Margin="0,5,0,0" Orientation="Horizontal">
+                        <TextBlock Padding="10" Text="Class 3" FontWeight="Bold" FontSize="13"/>
+                        <TextBox Margin="3,0,0,0" Padding="5" GotFocus="RemovenMeauNotation" Loaded="AddMeauNotation" LostFocus="AddMeauNotation"  x:Name="Class3Meau"  HorizontalAlignment="Left" Width="50" />
+                        <TextBox Margin="3,0,0,0" Padding="5" GotFocus="RemovenSigmaNotation" Loaded="AddSigmaNotation" LostFocus="AddSigmaNotation" x:Name="Class3Sigma" HorizontalAlignment="Right" Width="50" />
+                    </StackPanel>
+                    <StackPanel Margin="0,5,0,0" Orientation="Horizontal">
+                        <TextBlock Padding="10" Text="Class 4" FontWeight="Bold" FontSize="13"/>
+                        <TextBox Margin="3,0,0,0" Padding="5" GotFocus="RemovenMeauNotation" Loaded="AddMeauNotation" LostFocus="AddMeauNotation"  x:Name="Class4Meau"  HorizontalAlignment="Left" Width="50" />
+                        <TextBox Margin="3,0,0,0" Padding="5" GotFocus="RemovenSigmaNotation" Loaded="AddSigmaNotation" LostFocus="AddSigmaNotation" x:Name="Class4Sigma" HorizontalAlignment="Right" Width="50" />
+                    </StackPanel>
+                    <Button Click="ClassificationButton" FontSize="13" Margin="0,8,0,0" Width="200" Height="50" HorizontalAlignment="Center" Content="Classify"/>
                 </StackPanel>
             </ScrollViewer>
 
